Revision history for {{$dist->name}}

{{$NEXT}}

0.06      2013-10-13 15:12:49 -0400
  - documentation (mention Git::CPAN::Patch)

0.05      2013-10-13 05:39:34 -0400
  - require BackPAN::Index 0.41

0.04_01   2013-10-11 17:38:22 -0400
  - include git version in test diagnostic

0.04      2013-10-09 20:29:45 -0400
  - change name to cpangitify
  - handle distros with name changes

0.03      2013-10-09 15:43:54 -0400
  - documentation

0.02      2013-10-09 13:57:30 -0400
  - include date and author info from cpan

0.01      2013-10-09 12:58:19 -0400
  - initial version