@@ -25,6 +25,12 @@ remove = File::HomeDir::Test
 IPC::System::Simple = 0
 BackPAN::Index      = 0.41
 
+[Prereqs / ConfigurePrereqs]
+-phase         = configure
+Git::Wrapper   = 0
+Sort::Versions = 0
+
 [Author::Plicease::Upload]
 cpan = 1
 
+[=inc::MakeMaker]
